[project]
name = "radiopi"
version = "0.1.0"
description = "PlutoSDR NFM receiver with GNU Radio WAV recording"
requires-python = ">=3.10"
dependencies = [
    "pyadi-iio>=0.0.14",
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.scripts]
nfm-record = "nfm:main"
rf-power-debug = "rf_debug:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["nfm.py", "rf_debug.py"]
